<?xml version="1.0" encoding="utf-8"?>
<com.dangbei.gonzalez.layout.GonRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialog_user_agreement_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:clipChildren="false"
    android:clipToPadding="false"
    app:gon_layout_width="1300"
    app:gon_layout_height="788"
    >

    <com.dangbei.gonzalez.view.GonTextView
        android:id="@+id/dialog_agreement_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/agreement_title"
        android:textColor="@color/white"
        app:gon_layout_marginTop="100"
        app:gon_textSize="46"
        />

    <com.dangbei.gonzalez.view.GonTextView
        android:id="@+id/dialog_agreement_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_agreement_title"
        android:layout_centerHorizontal="true"
        android:fadeScrollbars="false"
        android:focusable="true"
        android:nextFocusUp="@+id/dialog_agreement_agree"
        android:scrollbarStyle="outsideOverlay"
        android:scrollbarThumbVertical="@color/white"
        android:scrollbarTrackVertical="@drawable/agreement_txt_v_bg"
        android:scrollbars="vertical"
        android:textColor="#99FFFFFF"
        android:verticalScrollbarPosition="right"
        app:gon_paddingRight="40"
        app:gon_layout_marginTop="40"
        app:gon_layout_marginLeft="80"
        app:gon_layout_marginRight="80"
        app:gon_layout_height="180"
        app:gon_layout_width="1100"
        app:gon_textSize="30"
        />

    <com.dangbei.gonzalez.view.GonTextView
        android:id="@+id/dialog_user_agreement_one_url_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_agreement_msg"
        android:layout_toEndOf="@+id/dialog_agreement_check_tip_tv"
        android:layout_toRightOf="@+id/dialog_agreement_check_tip_tv"
        android:background="@drawable/btn_eula"
        android:focusable="true"
        android:gravity="center"
        android:nextFocusLeft="@+id/dialog_user_agreement_one_url_tv"
        android:text="@string/user_agreement_private_url"
        android:textColor="@color/btn_eula_txt"
        app:gon_layout_marginLeft="100"
        app:gon_paddingLeft="40"
        app:gon_paddingRight="40"
        app:gon_layout_height="62"
        app:gon_layout_marginTop="40"
        app:gon_textSize="28"
        />
    <com.dangbei.gonzalez.view.GonTextView
        android:id="@+id/dialog_user_agreement_two_url_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_agreement_msg"
        android:layout_toEndOf="@+id/dialog_user_agreement_one_url_tv"
        android:layout_toRightOf="@+id/dialog_user_agreement_one_url_tv"
        android:background="@drawable/btn_eula"
        android:focusable="true"
        android:gravity="center"
        android:nextFocusLeft="@+id/dialog_user_agreement_one_url_tv"
        android:text="@string/user_agreement_user_url"
        android:textColor="@color/btn_eula_txt"
        app:gon_layout_marginLeft="40"
        app:gon_paddingLeft="40"
        app:gon_paddingRight="40"
        app:gon_layout_height="62"
        app:gon_layout_marginTop="40"
        app:gon_textSize="28"
        />
    <com.dangbei.gonzalez.layout.GonRelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_user_agreement_one_url_tv"
        android:layout_centerHorizontal="true"
        app:gon_layout_marginTop="78"
        >
        <com.dangbei.gonzalez.view.GonTextView
            android:id="@+id/dialog_agreement_agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_eula"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:nextFocusLeft="@+id/dialog_agreement_agree"
            android:text="@string/user_agreement_pass"
            android:textColor="@color/btn_eula_txt"
            app:gon_layout_width="400"
            app:gon_layout_height="100"
            app:gon_textSize="32"
            />

        <com.dangbei.gonzalez.view.GonTextView
            android:id="@+id/dialog_agreement_disagree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/dialog_agreement_agree"
            android:layout_marginLeft="0dp"
            android:layout_toRightOf="@id/dialog_agreement_agree"
            android:background="@drawable/btn_eula"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:nextFocusUp="@+id/dialog_user_agreement_one_url_tv"
            android:text="@string/user_agreement_exit"
            android:textColor="@color/btn_eula_txt"
            app:gon_layout_marginLeft="40"
            app:gon_layout_width="400"
            app:gon_layout_height="100"
            app:gon_textSize="32"
            />
    </com.dangbei.gonzalez.layout.GonRelativeLayout>
</com.dangbei.gonzalez.layout.GonRelativeLayout>